@@ -1107,6 +1107,7 @@ nuttx-0.3.15 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  In Place (XIP) support.
 	* Add mmap() API with restricted capability (only for XIP support)
 	* Extend ROMFS test at /examples/romfs to verify mmap() and XIP support.
+	* Add support for Intel Hex format output using objcopy
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
